--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+backports.functools-lru-cache==1.5
+beautifulsoup4==4.7.1
 certifi==2019.3.9
 chardet==3.0.4
 feedparser==5.2.1
@@ -5,4 +7,5 @@ idna==2.8
 python-dateutil==2.8.0
 requests==2.21.0
 six==1.12.0
+soupsieve==1.9.2
 urllib3==1.24.1
